--- a/_data/galleries.yml
+++ b/_data/galleries.yml
@@ -2,6 +2,7 @@ tiles:
   - title: "Portraits"
     url: "https://galleries.entangledhumans.com/portraits/"
     image: "/assets/images/covers/portraits.jpg"
+    private: true
 
   - title: "Architectural"
     url: "https://galleries.entangledhumans.com/architectural"
